
= rufus-doric CHANGELOG.txt


== rufus-doric - 0.1.17    not yet released

- view with a reduce returns [] instead of nil when no values


== rufus-doric - 0.1.16    released 2010/07/12

- OneDocModel#attach
- removed duplicates for custom view results. Thanks Claudio.
- 'open' models


== rufus-doric - 0.1.15    released 2010/06/22

- view_by :name, :ignore_case => true
- hardened Rufus::Doric.neutralize_id


== rufus-doric - 0.1.14    released 2010/05/22

- map and now, map and reduce (Model.view_by)


== rufus-doric - 0.1.13    released 2010/05/21

- fixed issue with model and missing association


== rufus-doric - 0.1.12    released 2010/05/20

- implemented Model#save. Thanks Claudio !
- raising ArgumentError when find(x) and x is not a String


== rufus-doric - 0.1.11    released 2010/05/17

- model : issue with nil attachments, fixed
- model.db.nuke_design_documents available
- custom views x(key) and by_x(x) are both OK


== rufus-doric - 0.1.10    released 2010/05/14

- model attachment :x for properties like attachments (#att and #att=(x))
- model#read(attachment_name)


== rufus-doric - 0.1.9    released 2010/05/13

- model#detach(attachment_name)
- model#attach(attachment_name, data)
- raising ActiveRecord::RecordInvalid if _id is missing or ''
- view, as shortcut for view_by


== rufus-doric - 0.1.8    released 2010/04/16

- view_by 'funcname', 'func' creates a 'funcname' method, not a 'by_funcname'
- ranges must now be specified with :start[key] and/or :end[key]


== rufus-doric - 0.1.7    released 2010/04/16

- view_by 'tysec', "emit(doc.type + '__' + doc.security_level, null);"
- model : view_by [ :x, :y ]  => view_by_x_and_y
- neutralize_id(i) now turns dots to underscores as well
- model : default _id generator (when no _id_field specified)


== rufus-doric - 0.1.6    released 2010/04/14

- property :sold, :default => false was not working. Fixed.


== rufus-doric - 0.1.5    released 2010/04/12

- implemented property :x, :default => 'y'